# notes_gym

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: app.rs
src/exercises/: mod.rs  notes.rs
src/exercises/notes/: neck_note.rs  paper_note.rs
static/styles/: main.scss
