[package]
name = "notes_gym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
sycamore = "0.8.0-beta.3"
log = "0.4.14"
console_log = "0.2.0"
js-sys = "0.3.56"
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
